--- a/.gitignore
+++ b/.gitignore
@@ -3,17 +3,36 @@ node_modules/
 .next/
 out/
 .turbo/
+**/.next/
+**/.turbo/
+**/node_modules/
+**/out/
+next-env.d.ts
+*.log
+
+# Package managers
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
 
 # Env
 .env
 .env.local
 .env.*.local
+**/.env
+**/.env.*
+**/.env.local
 
 # Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+logs/
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
+**/pnpm-debug.log*
 
 # Python
 __pycache__/
@@ -22,11 +41,21 @@ __pycache__/
 .venv/
 dist/
 build/
+**/__pycache__/
+**/.pytest_cache/
+**/.mypy_cache/
+**/.venv/
+**/dist/
+**/build/
+.coverage*
+coverage.xml
 
 # IDE
 .DS_Store
 .vscode/
 .idea/
+.history/
+.fleet/
 
 # Misc
 *.pyc
@@ -34,3 +63,20 @@ build/
 *.pyd
 *.egg-info/
 coverage/
+*.swp
+*.swo
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+*.orig
+*.tmp
+*.temp
+~$*
+
+# OS/Editor
+._*
+.Trash-*
+.vs/
+.gradle/
+.terraform/
+.DS_Store?
