--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,28 +4,30 @@
   "private": true,
   "type": "module",
   "scripts": {
-  "dev": "node -e \"const p=process.env.PORT||'3000'; require('child_process').spawn('next',['dev','-p',p],{stdio:'inherit',shell:true})\"",
+    "dev": "node -e \"const p=process.env.PORT||'3000'; require('child_process').spawn('next',['dev','-p',p],{stdio:'inherit',shell:true})\"",
     "build": "next build",
-  "start": "node -e \"const p=process.env.PORT||'3000'; require('child_process').spawn('next',['start','-p',p],{stdio:'inherit',shell:true})\"",
+    "start": "node -e \"const p=process.env.PORT||'3000'; require('child_process').spawn('next',['start','-p',p],{stdio:'inherit',shell:true})\"",
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "2.5.1",
+    "framer-motion": "^11.18.2",
+    "lucide-react": "^0.468.0",
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "zod": "3.23.8",
     "react-hook-form": "7.53.0",
-    "classnames": "2.5.1"
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@types/node": "20.14.10",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
-    "typescript": "5.5.4",
-    "tailwindcss": "3.4.7",
     "postcss": "8.4.40",
-    "autoprefixer": "10.4.19"
+    "tailwindcss": "3.4.7",
+    "typescript": "5.5.4"
   }
 }
